Update portfolio design and styling

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
@@ -16,22 +17,13 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
-
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Taiye Oyeniyi<br />
-						Portfolio</h1>
-						<p> Data Analyst | BI Developer <a href="https://drive.google.com/file/d/1lia_oTrNYkEPDoyQavU3to5uG07gI8XZ/view?usp=sharing">
-							<p>View Resume</a> 
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
-
-				<!-- Header -->
+                
+                <!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Taiye Oyeniyi</a>
-					</header>
+						<a class="logo">Taiye Oyeniyi Portfolio</a>
+					<a class="major">Data Analyst | BI Developer</a>
+                    
+                    </header>
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -39,9 +31,10 @@
 							<li class="active"></a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/taiye-oyeniyi-909243213/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1lia_oTrNYkEPDoyQavU3to5uG07gI8XZ/view?usp=sharing"class="View Resume"><span class="label">View Resume</span></a></li>
+                            <li><a href="https://www.linkedin.com/in/taiye-oyeniyi-909243213/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/TaiyeOyeniyi" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+                        </ul>
 					</nav>
 
 				<!-- Main -->
@@ -50,7 +43,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://docs.google.com/document/d/1J2Ft30-3z2SmTii_Yn5LiSuhwSx9B4lp/edit?usp=sharing&ouid=114937021184404179313&rtpof=true&sd=true">About Me<br />
+									<h2><a>About Me<br />
 									</a></h2>
 								</header>
 								<p>Hey, I’m Taiye 👋🏽 <p>
@@ -60,8 +53,7 @@ I’m a Data Analyst & BI Developer who enjoys cleaning messy data, building das
 
 I mostly work with Excel, Power BI, and SQL. Lately, I’ve been learning Python and Machine Learning, because data curiosity is a lifelong condition.
 
-If it’s useful, clear, and actually helps people work better, I’m interested.</p> 
-
+If it’s useful, clear, and actually helps people work better, I’m interested.</p>
 <li><a href="#Projects" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 </article>
 							<article class="post featured">
@@ -159,11 +151,7 @@ If it’s useful, clear, and actually helps people work better, I’m interested
 						</section>
 					</footer>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
+		
 			</div>
 
 		<!-- Scripts -->
