Update portfolio design and styling

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ If it’s useful, clear, and actually helps people work better, I’m interested
 										<h2>Retail Sales Analysis using Excel<br />
 									</header>
 									<a href="#" class="image fit"><img src="images/sales report excel dashboard.png" alt="" /></a>
-									<p>This project aims to explore the Walmart Sales data to understand top performing branches and products, sales trend of of different products, customer behaviour. The aims is to study how sales strategies can be improved and optimized.</p>
+									<p>This was my first data analysis project. Using Excel, I analyzed sales data from a fashion retail chain to uncover insights into suburb performance, buyer behavior, and category trends.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Taiye1122/Retail-sales-Excel-Project/blob/main/README.md" class="button">View Project</a></li>
 									</ul>
@@ -151,7 +151,11 @@ If it’s useful, clear, and actually helps people work better, I’m interested
 						</section>
 					</footer>
 
-		
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
 			</div>
 
 		<!-- Scripts -->
