Update portfolio design and styling

--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@ If it’s useful, clear, and actually helps people work better, I’m interested
 					<footer id="footer">
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>Kwara, Nigeria<br />
+								<h3>Resume</h3>
+								<p><a href="https://drive.google.com/file/d/1IBbBwkyu8mNWKS_sD7RZnBhxXXEldGmh/view?usp=sharing">Click to view Resume</a></p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(+234) 805 956 3252</a></p>
+								<p><a href="https://wa.link/lqb7jq">(+234) 901 472 7998</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">oyeniyitaiye100@gmail.com</a></p>
+								<p><a href="mailto:oyeniyitaiye100@gmail.com">oyeniyitaiye100@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
